--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Allow installing the app to the homescreen -->
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
-    <title></title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
